// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MealPicture renders correctly - default photo 1`] = `
<div
  class="fullscreen"
>
  <div
    class="photo"
  >
    <img
      alt="page.meals.imageNotLoaded"
      src="https://sws2.maxmanager.xyz/assets/fotos/dummies/foto-kommt-noch.jpg"
    />
     
    <fa-icon-stub
      class="lu-icon lu-times-circle close"
      icon="times"
    />
  </div>
   
  <div
    class="data"
  >
    <div
      class="title"
    >
      Spätzle mit Soß
    </div>
     
    <div
      class="price"
    >
      2,85 €
    </div>
     
    <ul
      class="info"
    >
      <li>
        mit Farbstoffen
      </li>
      <li>
        geschwefelt
      </li>
      <li>
        Ei
      </li>
      <li>
        Soja
      </li>
      <li>
        Milch und Laktose
      </li>
      <li>
        Senf
      </li>
      <li>
        Schwefeloxid ("SO2") und Sulfite
      </li>
      <li>
        Weizen
      </li>
      <li>
        Geflügel
      </li>
    </ul>
  </div>
</div>
`;

exports[`MealPicture renders correctly 1`] = `
<div
  class="fullscreen"
>
  <div
    class="photo"
  >
    <img
      alt="page.meals.imageNotLoaded"
      src="https://sws2.maxmanager.xyz/assets/photo123.jpg"
    />
     
    <fa-icon-stub
      class="lu-icon lu-times-circle close"
      icon="times"
    />
  </div>
   
  <div
    class="data"
  >
    <div
      class="title"
    >
      Spätzle mit Soß
    </div>
     
    <div
      class="price"
    >
      2,85 €
    </div>
     
    <ul
      class="info"
    >
      <li>
        mit Farbstoffen
      </li>
      <li>
        geschwefelt
      </li>
      <li>
        Ei
      </li>
      <li>
        Soja
      </li>
      <li>
        Milch und Laktose
      </li>
      <li>
        Senf
      </li>
      <li>
        Schwefeloxid ("SO2") und Sulfite
      </li>
      <li>
        Weizen
      </li>
      <li>
        Geflügel
      </li>
    </ul>
  </div>
</div>
`;
